#41 feat: 인사이트 카드 조회 결과 페이징 적용 및 전체 데이터 수 응답 필드 추가